plex/plex.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: plex
  name: plex
---
apiVersion: v1
kind: Service
metadata:
  name: plex-tcp
  namespace: plex
spec:
  selector:
    app: plex
  ports:
    - port: 32400
      targetPort: 32400
      name: pms-web
      protocol: TCP
    - port: 3005
      targetPort: 3005
      name: plex-companion
      protocol: TCP
    - port: 8324
      targetPort: 8324
      name: plex-roku
      protocol: TCP
    - port: 32469
      targetPort: 32469
      name: dlna-tcp
      protocol: TCP
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: plex-udp
  namespace: plex
spec:
  selector:
    app: plex
  ports:
    - port: 1900
      targetPort: 1900
      name: dlna-udp
      protocol: UDP
    - port: 5353
      targetPort: 5353
      name: discovery-udp
      protocol: UDP
    - port: 32410
      targetPort: 32410
      name: gdm-32410
      protocol: UDP
    - port: 32412
      targetPort: 32412
      name: gdm-32412
      protocol: UDP
    - port: 32413
      targetPort: 32413
      name: gdm-32413
      protocol: UDP
    - port: 32414
      targetPort: 32414
      name: gdm-32414
      protocol: UDP
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex
  namespace: plex
  labels:
    app: plex
    tier: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: plex
      tier: app
  template:
    metadata:
      labels:
        app: plex
        tier: app
    spec:
      # nodeSelector for nextcloud upgrades
      nodeSelector:
        kubernetes.io/hostname: forlond-3
      containers:
        - name: plex
          image: linuxserver/plex:1.30.2
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              memory: 1024Mi
              cpu: 2000m
            requests:
              memory: 256Mi
              cpu: 200m
          volumeMounts:
            - name: plex-config
              mountPath: /config
            - name: plex-transcode
              mountPath: /transcode
            - name: plex-data
              mountPath: /media
          ports:
            - containerPort: 32400
              name: pms-web
            - containerPort: 3005
              name: plex-companion
            - containerPort: 8324
              name: plex-roku
            - containerPort: 32469
              name: dlna-tcp
            - containerPort: 1900
              name: dlna-udp
              protocol: UDP
            - containerPort: 5353
              name: discovery-udp
              protocol: UDP
            - containerPort: 32410
              name: gdm-32410
              protocol: UDP
            - containerPort: 32412
              name: gdm-32412
              protocol: UDP
            - containerPort: 32413
              name: gdm-32413
              protocol: UDP
            - containerPort: 32414
              name: gdm-32414
              protocol: UDP
      volumes:
        - name: plex-config
          persistentVolumeClaim:
            claimName: plex-config
        - name: plex-transcode
          persistentVolumeClaim:
            claimName: plex-transcode
        - name: plex-data
          persistentVolumeClaim:
            claimName: plex-data
      affinity:
        podAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: pictaviensis.regnum/storage
                      operator: In
                      values:
                        - "true"
                topologyKey: kubernetes.io/hostname
              weight: 60
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - plex
                topologyKey: kubernetes.io/hostname
              weight: 20
---
