plex/ingress.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: plex
  labels:
    name: plex
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plex
  namespace: plex
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: 8192m
spec:
  rules:
    - host: plex.lindon.endor
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: plex-tcp
                port:
                  number: 32400
